istiofiles/virtual-service-promoted-v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - match:
    - headers:
        baggage-user-preference:
          prefix: "12"
    route:
    - destination:
        host: recommendation
        subset: version-v3
  - route:
    - destination:
        host: recommendation
        subset: version-v2
---
